# llmd

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: android-release.yml  test.yml
app/: package-lock.json  package.json
app/src/: main.ts  styles.css
app/src-tauri/: Cargo.toml
app/src-tauri/android/llmd-ipc/src/main/java/com/storytellerf/llmd/: LlmdIpcAuthorization.kt  LlmdIpcAuthorizationActivity.kt  LlmdIpcService.kt
app/src-tauri/src/: android_litert.rs  lib.rs  main.rs
apps/cli/src/: main.rs
apps/desktop/: index.html  package-lock.json  package.json
apps/desktop/src/: main.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/android/llmd-ipc/src/main/aidl/com/storytellerf/llmd/ipc/: ILlmdChatCallback.aidl  ILlmdService.aidl
apps/desktop/src-tauri/android/llmd-ipc/src/main/aidl/dev/placeholder/llmd/ipc/: ILlmdChatCallback.aidl  ILlmdService.aidl
apps/desktop/src-tauri/android/llmd-ipc/src/main/java/dev/placeholder/llmd/: LlmdIpcService.kt
apps/desktop/src-tauri/src/: android_litert.rs  main.rs
cli/: Cargo.toml
cli/src/: main.rs
crates/llmd-android-e2e/: Cargo.toml
crates/llmd-android-e2e/src/: main.rs
crates/llmd-core/: Cargo.toml
crates/llmd-core/src/: lib.rs
crates/llmd-rlitert/: Cargo.toml
crates/llmd-rlitert/src/: lib.rs
crates/llmd-server/: Cargo.toml
crates/llmd-server/src/: lib.rs
docs/: android-tauri-openai-api.md
scripts/: check-static.sh  download-gemma-model.sh  prepare-android-model.sh  sync-tauri-android-overrides.sh  test-android-appium.sh  test-android-openai-api.sh  test-openai-api.sh
