[workspace]
members = [
    "cli",
    "crates/llmd-android-e2e",
    "crates/llmd-core",
    "crates/llmd-rlitert",
    "crates/llmd-server",
]
exclude = ["app/src-tauri"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/storytellerF/llmd"
rust-version = "1.78"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.7"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
futures-core = "0.3"
futures-util = "0.3"
litert-lm = "0.2.1"
llmd-core = { path = "crates/llmd-core" }
llmd-rlitert = { path = "crates/llmd-rlitert" }
llmd-server = { path = "crates/llmd-server" }
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.42", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11", features = ["v4"] }
