[package]
name = "llmd-rlitert"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
futures-util.workspace = true
litert-lm.workspace = true
llmd-core.workspace = true
tokio-stream.workspace = true

[dev-dependencies]
tokio.workspace = true
